[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["Cere Blanco <743526+cereblanco@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^20.8b1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 99
# make it compatible with black:
multi_line_output = 3
include_trailing_comma = true
